root changed again

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
       <div class="form-container">
         <form id="myForm">
-          <h2>A little about you</h2>
+          <h2>A little about youu</h2>
           <fieldset>
             <legend>
               Please fill some of the basic details to get started.
